resources/hipvan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hipvan-deployment
  labels:
    app: hipvan 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hipvan
  template:
    metadata:
      labels:
        app: hipvan
    spec:
      containers:
        - name: hipvan
          image: 828109562156.dkr.ecr.ap-southeast-2.amazonaws.com/hipvan:240729094134
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hipvan-nodeport-service
  labels:
    app: hipvan
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /hipvan/health
spec:
  type: NodePort
  selector:
    app: hipvan
  ports:
    - port: 80
      targetPort: 5000
