resources/moversly-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moversly-deployment
  labels:
    app: moversly 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moversly
  template:
    metadata:
      labels:
        app: moversly
    spec:
      containers:
        - name: moversly
          image: 828109562156.dkr.ecr.ap-southeast-2.amazonaws.com/moversly:240727133358
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: moversly-nodeport-service
  labels:
    app: moversly
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /moversly/health
spec:
  type: NodePort
  selector:
    app: moversly
  ports:
    - port: 80
      targetPort: 5000
